--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -84,6 +84,7 @@
 html,
 body {
   scroll-behavior: smooth;
+  scroll-padding-top: 64px;
 }
 
 body {
